<resources>
    <string name="app_name">Pokemon</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="hp" translatable="false">HP</string>
    <string name="base_stats">Base Stats</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="speed">Speed</string>
    <string name="experience">Experience</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="nothing_to_show">Nothing to show</string>
</resources>