<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PokemonActivity">

    <ImageView
        android:id="@+id/pokemonActivityImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/pokemonActivityTextViewName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pokemonActivityTextViewName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/pokemonActivityGridWeightHeight"
        app:layout_constraintTop_toBottomOf="@+id/pokemonActivityImageView" />

    <GridLayout
        android:id="@+id/pokemonActivityGridWeightHeight"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:columnCount="2"
        app:layout_constraintBottom_toTopOf="@id/pokemonActivityGridBaseStats"
        app:layout_constraintTop_toBottomOf="@id/pokemonActivityTextViewName">

        <TextView
            android:id="@+id/pokemonActivityTextViewWeight"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pokemonActivityTextViewHeight"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/weight"
            android:textColor="@color/grey"
            android:textSize="20sp" />

        <TextView
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/height"
            android:textColor="@color/grey"
            android:textSize="20sp" />
    </GridLayout>

    <GridLayout
        android:id="@+id/pokemonActivityGridBaseStats"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokemonActivityGridWeightHeight">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:gravity="center"
            android:text="@string/base_stats"
            android:textSize="30sp" />

        <TextView
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/hp"
            android:textColor="@color/grey"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressBarHp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_columnWeight="2"
            android:layout_marginEnd="20dp"
            android:max="100"
            android:minHeight="50dp"
            android:progress="50" />

        <TextView
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/attack"
            android:textColor="@color/grey"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressBarAttack"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_columnWeight="2"
            android:layout_marginEnd="20dp"
            android:max="100"
            android:minHeight="50dp"
            android:progress="50" />

        <TextView
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/defense"
            android:textColor="@color/grey"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressBarDefense"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_columnWeight="2"
            android:layout_marginEnd="20dp"
            android:max="100"
            android:minHeight="50dp"
            android:progress="50" />

        <TextView
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/speed"
            android:textColor="@color/grey"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressBarSpeed"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_columnWeight="2"
            android:layout_marginEnd="20dp"
            android:max="100"
            android:minHeight="50dp"
            android:progress="50" />

        <TextView
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/experience"
            android:textColor="@color/grey"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressBarExperience"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_columnWeight="2"
            android:layout_marginEnd="20dp"
            android:max="100"
            android:minHeight="50dp"
            android:progress="50" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>